syntax = "proto3";

import "google/protobuf/empty.proto";

package post;

message Post {
  int32 id = 1;
  string title = 2;
  optional string description = 3;
}

message CreatePostRequest {
  string title = 1;
  optional string description = 2;
}

service PostService {
  rpc CreatePost (CreatePostRequest) returns (Post);
  rpc GetPostAddedSubscription (google.protobuf.Empty) returns (stream Post);
}
